third_party/move/move-compiler-v2/tests/lambda/inline-parity/eval_ignored_param.lambda.exp
// -- Model dump before bytecode pipeline
module 0x42::Test {
    private fun foo(f: |(u64, u64, u64)|u64,g: |(u64, u64, u64)|u64,x: u64,_: u64,y: u64,z: u64): u64 {
        {
          let r1: u64 = (f)(x: u64 = Add<u64>(x, 1);
          x, y: u64 = Add<u64>(y, 1);
          y, z: u64 = Add<u64>(z, 1);
          z);
          {
            let r2: u64 = (g)(x: u64 = Add<u64>(x, 1);
            x, y: u64 = Add<u64>(y, 1);
            y, z: u64 = Add<u64>(z, 1);
            z);
            Add<u64>(Add<u64>(Add<u64>(Add<u64>(r1, r2), Mul<u64>(3, x)), Mul<u64>(5, y)), Mul<u64>(7, z))
          }
        }
    }
    public fun test() {
        {
          let r: u64 = Test::foo(closure#0Test::test$lambda$1(), closure#0Test::test$lambda$2(), 1, 10, 100, 1000);
          if Eq<u64>(r, 9637) {
            Tuple()
          } else {
            Abort(r)
          };
          Tuple()
        }
    }
    private fun test$lambda$1(x: u64,param$1: u64,z: u64): u64 {
        {
          let _: u64 = param$1;
          Mul<u64>(x, z)
        }
    }
    private fun test$lambda$2(param$0: u64,y: u64,param$2: u64): u64 {
        {
          let _: u64 = param$2;
          {
            let _: u64 = param$0;
            y
          }
        }
    }
} // end 0x42::Test

// -- Sourcified model before bytecode pipeline
module 0x42::Test {
    fun foo(f: |(u64, u64, u64)|u64, g: |(u64, u64, u64)|u64, x: u64, _: u64, y: u64, z: u64): u64 {
        let r1 = f({
            x = x + 1;
            x
        }, {
            y = y + 1;
            y
        }, {
            z = z + 1;
            z
        });
        let r2 = g({
            x = x + 1;
            x
        }, {
            y = y + 1;
            y
        }, {
            z = z + 1;
            z
        });
        r1 + r2 + 3 * x + 5 * y + 7 * z
    }
    public fun test() {
        let r = foo(|(arg0,arg1,arg2)| test$lambda$1(arg0, arg1, arg2), |(arg0,arg1,arg2)| test$lambda$2(arg0, arg1, arg2), 1, 10, 100, 1000);
        if (r == 9637) () else abort r;
    }
    fun test$lambda$1(x: u64, param$1: u64, z: u64): u64 {
        let _ = param$1;
        x * z
    }
    fun test$lambda$2(param$0: u64, y: u64, param$2: u64): u64 {
        let _ = param$2;
        let _ = param$0;
        y
    }
}


Diagnostics:
error: Calls to function values other than inline function parameters not yet implemented
  ┌─ tests/lambda/inline-parity/eval_ignored_param.move:4:11
  │
4 │     let r1 = f({x = x + 1; x}, {y = y + 1; y}, {z = z + 1; z});
  │              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Calls to function values other than inline function parameters not yet implemented
  ┌─ tests/lambda/inline-parity/eval_ignored_param.move:5:11
  │
5 │     let r2 = g({x = x + 1; x}, {y = y + 1; y}, {z  = z + 1 ; z});
  │              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda/inline-parity/eval_ignored_param.move:10:14
   │
10 │     let r = foo(|x, _, z| x*z, |_, y, _| y, 1, 10, 100, 1000);
   │                 ^^^^^^^^^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda/inline-parity/eval_ignored_param.move:10:29
   │
10 │     let r = foo(|x, _, z| x*z, |_, y, _| y, 1, 10, 100, 1000);
   │                                ^^^^^^^^^^^
